# brickflow-adapters-airflow

./: .gitignore  Makefile  README.md  prospector.yaml  pyproject.toml
brickflow_airflow_110/: __init__.py  adapter.py  cronhelper.py
